<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.whitecaps.GiveAttendance">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/otpvalue"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="Enter OTP"
        android:textAlignment="center"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintHorizontal_bias="0.587" />

    <Button
        android:id="@+id/submit"
        android:textSize="16sp"
        android:layout_width="88dp"
        android:layout_height="43dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="210dp"
        android:textAlignment="center"
        android:background="@color/colorPrimary"
        android:text="Submit"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintVertical_bias="0.111" />



</RelativeLayout>

</android.support.constraint.ConstraintLayout>
